# creative_claw

./: .env.template  .gitignore  Makefile  README.md  README_zh.md  output.txt  pyproject.toml  requirements.txt
apps/: art_cli.py  run_feishu.py  run_telegram.py
conf/: agent.py  api.py  app_config.py  channel.py  llm.py  path.py  schema.py  system.py
docs/: design_p1_completion_zh.md  development.md  expert_model_capability_map_zh.md  media_basic_operations.md  model_and_token_map.md  ppt_production_zh.md  production_framework_zh.md  short_video_generation_framework_zh.md  short_video_p0_completion_zh.md  short_video_production_zh.md
src/: chat_runner.py  creative_claw_cli.py  logger.py  utils.py
unit_test/: test_app_config.py  test_audio_generation_experts.py  test_basic_operations_experts.py  test_channel_manager.py  test_creative_claw_cli.py  test_design_adk_eval_assets.py  test_design_p1_completion_doc.py  test_design_production.py  test_design_real_smoke.py  test_executor.py  test_expert_cards.py  test_expert_dispatcher.py  test_feishu_channel.py  test_file_tools.py  test_image_editing_agent.py  test_image_expert_providers.py  test_image_ground_agent.py  test_image_grounding_agent.py  test_image_search_agent.py  test_image_segmentation_agent.py  test_image_understanding.py  test_image_understanding_agent.py  test_local_channel.py  test_new_expert_agents.py  test_orchestrator.py  test_ppt_adk_eval_assets.py  test_ppt_production.py  test_production_session_isolation.py  test_runtime_session.py  test_short_video_adk_eval_assets.py  test_short_video_production.py  (+8 more)
(+217 files in other folders)
